--- a/database-config/default.conf
+++ b/database-config/default.conf
@@ -5,7 +5,7 @@ server {
         root /var/www/veggie-club/photos;
         autoindex on;
 
-        server_name localhost;
+        server_name fedeshih.me;
 
         location / {
                 try_files $uri $uri/ =404;
