--- a/database-config/Dockerfile
+++ b/database-config/Dockerfile
@@ -1,5 +1,7 @@
-FROM nginx
+FROM nginx:latest
 
 RUN rm /etc/nginx/conf.d/*
 
 COPY default.conf /etc/nginx/conf.d
+
+RUN mkdir -p /var/www/veggie-club/food
