Created flask app for photo management

--- a/database-config/default.conf
+++ b/database-config/default.conf
@@ -2,7 +2,7 @@ server {
         listen 80;
         listen [::]:80;
 
-        root /var/www/veggie-club/food;
+        root /var/www/veggie-club/;
         autoindex on;
 
         server_name fedeshih.me;
