Corrected the domain and polished command system

--- a/database-config/default.conf
+++ b/database-config/default.conf
@@ -5,7 +5,7 @@ server {
         root /var/www/veggie-club/;
         autoindex on;
 
-        server_name fedeshih.me;
+        server_name veggieclub.com.ar;
 
         location / {
                 try_files $uri $uri/ =404;
