--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
     - 5000:80
     environment:
     - DATABASE_URL=mongodb://database:27017
-    - DOMAIN=http://fedeshih.me
+    - DOMAIN=http://veggieclub.com.ar
 
 volumes:
   photos:
