--- a/src/app-settings.json
+++ b/src/app-settings.json
@@ -1,5 +1,5 @@
 {
   "prepend": ["veg", "Veg"],
   "photosPath": "./dist/photos",
-  "cdn-link": "fedeshih.me/"
+  "cdn-link": "veggieclub.com.ar"
 }
