hold up on certificates. Added blocks to mask flask app

--- a/database-config/default.conf
+++ b/database-config/default.conf
@@ -1,13 +1,23 @@
 server {
         listen 80;
-        listen [::]:80;
 
         root /var/www/veggie-club/;
         autoindex on;
 
-        server_name veggieclub.com.ar;
+        server_name fotos.veggieclub.com.ar;
 
         location / {
                 try_files $uri $uri/ =404;
+        }
+}
+
+
+server {
+        listen 80;
+
+        server_name db.veggieclub.com.ar;
+
+        location / {
+                proxy_pass http://flask:80;
         }
 }
