--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,11 +28,9 @@ services:
     - photos:/app/static/images
     depends_on:
     - database
-    ports:
-    - 5000:80
     environment:
     - DATABASE_URL=mongodb://database:27017
-    - DOMAIN=http://veggieclub.com.ar
+    - DOMAIN=http://fotos.veggieclub.com.ar
 
 volumes:
   photos:
