--- a/database-config/default.conf
+++ b/database-config/default.conf
@@ -18,6 +18,6 @@ server {
         server_name db.veggieclub.com.ar;
 
         location / {
-                proxy_pass http://flask:80;
+                proxy_pass http://127.0.0.1:5000;
         }
 }
