--- a/database-config/default.conf
+++ b/database-config/default.conf
@@ -1,3 +1,7 @@
+upstream flask {
+        server flask:80;
+}
+
 server {
         listen 80;
 
@@ -18,6 +22,6 @@ server {
         server_name db.veggieclub.com.ar;
 
         location / {
-                proxy_pass http://127.0.0.1:5000;
+                proxy_pass http://flask;
         }
 }
